NEW 279235
Fix strange antipattern in JSManagedValue
https://bugs.webkit.org/show_bug.cgi?id=279235
Summary Fix strange antipattern in JSManagedValue
Seija K.
Reported 2024-09-05 17:00:40 PDT
The idea of calling an initWithValue and passing nil is weird. Just call super init at that point and call it a day. This will also confuse analyzers less.
Attachments
Ahmad Saleem
Comment 1 2024-09-05 18:10:59 PDT
Radar WebKit Bug Importer
Comment 2 2024-09-12 20:10:05 PDT
Note You need to log in before you can comment on or make changes to this bug.