[JSC] Fix initWithValue antipattern in JSManagedValue https://bugs.webkit.org/show_bug.cgi?id=279235

Reviewed by NOBODY (OOPS!).

The idea of calling an initWithValue and passing nil is weird.
Just call [super init] at that point and call it a day.
This will also confuse analyzers less.

* Source/JavaScriptCore/API/JSManagedValue.mm:
  (-[JSManagedValue init]): Call [super init] directly.